# libami-2.0.1

./: AUTHORS  ChangeLog  Library.txt  Makefile.am  Makefile.in  README  README.md  admin.c  channel.c  config.h.in  config.h.in~  configure  configure.in  core.c  info.c  manager.c
autom4te.cache/: output.0  traces.0
examples/: Makefile  app-amitest.c  app-amitest.h  net.c  net.h  test.c
include/ami/: admin.h  ami.h  channel.h  core.h  info.h  manager.h
