#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(libami, 2.0.1, j@intuitivecreations.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([manager.c])
AC_CONFIG_HEADER([config.h])
AC_CANONICAL_HOST

LT_CURRENT=1
LT_REVISION=0
LT_AGE=0

AC_SUBST(LT_CURRENT)
AC_SUBST(LT_REVISION)
AC_SUBST(LT_AGE)

# Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.
case "$host" in
 *-*-cygwin*|*-*mingw32)
   CFLAGS="$CFLAGS -Wall -DWIN32 -mms-bitfields"
   LDFLAGS="$LDFLAGS -L/mingw/lib -lws2_32"
   echo "Compiling for win32"
 ;;
esac

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/socket.h winsock2.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([send recv select strcasecmp strrchr strstr])

AC_DISABLE_STATIC

AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
